--- a/src/main/resources/assets/testingmod/lang/ru_ru.json
+++ b/src/main/resources/assets/testingmod/lang/ru_ru.json
@@ -1,3 +1,4 @@
 {
-  "item.testingmod.mythril_ingot" : "Мифрилловый Слиток"
+  "item.testingmod.mythril_ingot" : "Мифрилловый Слиток",
+  "block.testingmod.mythril_block" : "Мифрилловый Блок"
 }
