--- a/src/main/resources/assets/testingmod/lang/en_us.json
+++ b/src/main/resources/assets/testingmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.testingmod.mythril_ingot" : "Mythrill Ingot"
+  "item.testingmod.mythril_ingot" : "Mythrill Ingot",
+  "block.testingmod.mythril_block" : "Mythrill Block"
 }
